--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ repositories {
 dependencies {
     implementation 'org.seleniumhq.selenium:selenium-java:4.8.1'
     implementation 'io.github.bonigarcia:webdrivermanager:5.3.2'
+    implementation 'org.seleniumhq.selenium:selenium-http-jdk-client:4.8.1'
 }
 
 test {
